<resources>
    <string name="app_name">Translation Cards</string>
    <string name="main_instructions">Tap a phrase to hear it, tap again to stop.\nMake sure your volume is turned up.</string>
    <string name="main_feedback_request">Is this app useful for you?\nLet us know how it can be improved.</string>
    <string name="main_feedback_button_text">GIVE FEEDBACK</string>
    <string name="main_export_button_text">SHARE</string>
    <string name="get_started_title">Card Maker</string>
    <string name="get_started_header">Make your own card</string>
    <string name="get_started_detail">Write your script, record your phrase and use your flashcard in the field.</string>
    <string name="get_started_button_getstarted">GET STARTED</string>
    <string name="recording_label_create_title">Write your %s phrase and translation</string>
    <string name="recording_label_edit_title">Update or delete your flashcard</string>
    <string name="source_phrase_activity_description">Keep it short, direct, and really clear. Your phrase should make it really easy for the listener to know how to respond.</string>
    <string name="recording_label_hint_text">e.g. Wait here for 30 minutes</string>
    <string name="record_audio_title">Record your phrase</string>
    <string name="recording_text_create_title">Enter the translation text</string>
    <string name="recording_text_hint_text">Enter translation here</string>
    <string name="summary_title">Review and save your card</string>
    <string name="summary_detail">Find your new flashcard at the top of the list in the %s category.</string>
    <string name="deck_creation_field_label_deck_name">Deck Name:</string>
    <string name="deck_creation_field_label_target_languages">Target Languages (comma-separated):</string>
    <string name="deck_creation_add_button">Add Deck</string>
    <!-- The order of these is important! Don't move them around without updating DecksActivity. -->
    <string-array name="deck_add_options">
        <item>Import from file</item>
        <item>Create fresh deck</item>
    </string-array>
    <string name="navigation_button_back">BACK</string>
    <string name="navigation_button_done">DONE</string>
    <string name="navigation_button_next">NEXT</string>
    <string name="navigation_button_save">SAVE</string>
    <string name="import_confirm_alert_title">Confirm import</string>
    <string name="import_confirm_alert_message">Import Translation Cards deck?</string>
    <string name="import_confirm_alert_positive">Import</string>
    <string name="import_confirm_alert_negative">Cancel</string>
    <string name="import_failure_alert_title">Failure</string>
    <string name="import_failure_default_error_message">Importing failed.</string>
    <string name="import_failure_file_not_found_error_message">Translation Cards deck file is invalid.</string>
    <string name="import_failure_no_index_file_error_message">TXC file did not have an index.</string>
    <string name="import_failure_invalid_index_file_error_message">TXC file index was invalid.</string>
    <string name="import_failure_read_error_error_message">Error reading TXC file or its contents.</string>
    <string name="import_failure_existing_deck">Deck has already been imported.</string>
    <string name="export_progress_dialog_title">Share in progress</string>
    <string name="export_progress_dialog_message">Please wait, building file...</string>
    <string name="export_failure_target_file_not_found_error_message">Target file not found.</string>
    <string name="export_failure_write_error_error_message">Error writing file.</string>
    <string name="export_failure_too_many_duplicate_filenames_error_message">Too many duplicate filenames.</string>
    <string name="misc_ok">OK</string>
    <string name="misc_cancel">Cancel</string>
    <string name="misc_self">Self</string>
    <string name="data_default_deck_name">Default</string>
    <string name="my_decks">My Decks</string>
    <string name="data_default_deck_publisher">My Deck</string>
    <string name="data_self_publisher">Self</string>
    <string name="default_origin_language">ENGLISH</string>
    <string name="edit_label">Edit this flashcard</string>
    <string name="delete_label">Delete this flashcard</string>
    <string name="no_translation_text">No Translation Provided</string>
    <string name="deck_card_expansion_make_copy">Make a personal copy of this deck.</string>
    <string name="deck_card_expansion_delete">Delete this deck.</string>
    <string name="deck_copy_dialog_title">Name for deck copy?</string>
    <string name="deck_delete_dialog_title">Are you sure you want to delete this deck?</string>
    <string name="import_version_override_title">Override other version?</string>
    <string name="deck_export_dialog_title">Name for shared deck?</string>
    <string name="translated_text_hint">Add %s translation</string>
    <string name="navigation_button_edit">EDIT</string>
    <string name="export_filename">shared-deck.txc</string>
    <string name="file_download_title">Downloading File</string>
    <string name="no_audio_file_message">Unable to play audio file</string>
    <string name="unable_to_record_message">Unable to Record Audio.</string>
    <string name="could_not_play_audio_message">%s translation not recorded.</string>
    <string name="navigation_button_cancel">CANCEL</string>
    <string name="enter_translated_phrase_title">Optional: add the translation</string>
    <string name="enter_source_phrase_activity_title">Write your phrase</string>
    <string name="activity_enter_translated_phrase_description">Add optional translation so you\'re able to show the card to people who may prefer to read.</string>
    <string name="activity_record_audio_instructions">Tap record then speak clearly at a normal speed. When you\'re done, tap record again. Play back and re-record until you\'re satisfied.</string>
    <string name="activity_summary_instructions">Here\'s your new card. Before you save, be sure to review the phrase, translation, and recording.</string>
    <string name="translated_phrase_input_language_label">"%s TEXT"</string>
    <string name="empty_my_decks_message">Looks like you don\'t have any Translation Card Decks</string>
    <string name="empty_my_decks_title">Let\'s get started</string>
    <string name="import_deck_button_text">IMPORT DECK</string>
    <string name="create_deck_button_text">MAKE DECK</string>
    <string name="navigation_button_skip">SKIP</string>
    <string name="empty_deck_title">Let\'s make this useful</string>
    <string name="empty_deck_message">This deck doesn\'t have any cards.\nGet started by creating your first card.</string>
    <string name="add_translation_button_text">ADD NEW CARD</string>
    <string name="deck_get_started_title">Deck Maker</string>
    <string name="enter_deck_title">Enter the deck title</string>
    <string name="deck_title_hint_text">e.g. Lesvos Beach Arrivals</string>
    <string name="record_audio">Record Audio</string>
    <string name="play_audio">Play Audio</string>
    <string name="deck_get_started_header">Make your own deck</string>
    <string name="deck_get_started_detail">Creating a new deck allows you to add custom translation cards.</string>
    <string name="enter_deck_title_description">Let\'s begin by entering the deck title. A good translation card deck helps with translations in a specific scenario. The title should be short and descriptive.</string>
    <string name="enter_deck_destination_title">Set the destination language</string>
    <string name="enter_deck_destination_language_description">A deck has one or more destination languages, these are the languages you would like to translate to. Tap \'Add Language\' to get started.</string>
    <string name="enter_deck_destination_input">e.g. Arabic, Farsi, Pashto</string>
    <string name="delete_deck">Delete</string>
    <string name="share_deck">Share</string>
    <string name="edit_deck">Edit</string>
    <string name ="delete_dialog_message">Are you sure you want to delete this translation card from all languages?</string>
    <string name="summary_detail_no_audio">It looks like you didn\'t record the phrase audio for this language. You can record the audio now but it\'s okay to come back later when you\'re ready.</string>
    <string name="delete_dialog_title">Delete Flashcard</string>
    <string name="no_audio_toggle_text">Hide %d cards that don\'t have audio in this language</string>
    <string name="deck_author_title">Set the author name</string>
    <string name="deck_author_and_lock_description">It\'s important to know who created a Translation Cards deck. Usually this is just your full name or your organisation if it\'s an official deck.</string>
    <string name="deck_author_hint_text">Your name or organisation</string>
    <string name="deck_source_language_title">Set the source language</string>
    <string name="deck_source_language_description">A deck has one source language. This is the language you would like to translate from. It\'s often the language your field workers are comfortable speaking.</string>
    <string name="deck_source_language_input">Source language</string>
    <string name="deck_deck_review_and_save_title">Review and save your deck</string>
    <string name="activity_deck_review_and_save_description">Here\'s your new deck. Before you save, be sure to review the title, author, and languages</string>
    <string name="english">English</string>
    <string name="invalid_source_language_message">Language not supported. Type then tap a valid language</string>
    <string name="microphone_permission_message">Translation Cards uses your microphone to record phrases.\n\nSince it\'s the first time you\'re making a card, you need to allow Translation Cards to use your microphone.</string>
    <string name="permission_not_granted">Permission not granted.</string>
    <string name="record_audio_permission_granted">You can now record audio. Tap record again to start recording.</string>
    <string name="select_language_prompt">Please select a language</string>
    <string name="add_language_chip_label">Add Language</string>
    <string name="delete_chip">Delete Chip</string>
    <string name="feedback_url">https://docs.google.com/forms/d/1p8nJlpFSv03MXWf67pjh_fHyOfjbK9LJgF8hORNcvNM/viewform?entry.1158658650=</string>
    <!-- The order of these is important! Don't move them around without updating ImportActivitity. -->
    <string-array name="version_override_options">
        <item>Cancel import</item>
        <item>Import this, but keep existing deck</item>
        <item>Import this and delete existing deck</item>
    </string-array>
</resources>
