<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deck_creation_field_label_deck_name" />

    <EditText
        android:id="@+id/field_deck_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deck_creation_field_label_target_languages" />

    <EditText
        android:id="@+id/field_target_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_add_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deck_creation_add_button" />
</LinearLayout>