<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/get_started_titlebar">

        <ImageButton
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/back"
            android:id="@+id/get_started_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:text="@string/get_started_title"
            android:id="@+id/get_started_title" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@+id/get_started_titlebar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/get_started_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/get_started_image"
        android:layout_marginTop="20dp"
        android:text="@string/get_started_header"
        android:textSize="25sp"
        android:textColor="@color/primaryTextColor"
        android:layout_centerHorizontal="true"
        android:id="@+id/get_started_decription_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_detail"
        android:layout_below="@+id/get_started_decription_title"
        android:textSize="15sp"
        android:lineSpacingExtra="3dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/get_started_detail"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:paddingLeft="21dp"
        android:paddingRight="21dp"
        android:layout_below="@+id/get_started_detail"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimary"
        android:text="@string/get_started_button_getstarted"
        android:layout_centerHorizontal="true"
        android:id="@+id/get_started_button"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/get_started_button"/>

</RelativeLayout>
</ScrollView>