<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/deck_source_language_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/deck_source_language_title" />

    <TextView
        android:id="@+id/deck_source_language_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/deck_source_language_image"
        android:background="@color/colorPrimary"
        android:paddingBottom="18dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="18dp"
        android:text="@string/deck_source_language_title"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/deck_source_language_description"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/deck_source_language_title"
        android:lineSpacingExtra="3dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        android:text="@string/deck_source_language_description"
        android:textSize="16.5sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deck_source_language_view"
        android:layout_below="@+id/deck_source_language_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="24dp"
        android:text="@string/english"
        android:textColor="@color/colorPrimary"
        android:textSize="16.5sp"
        android:textStyle="bold"
        />

    <!--Nav Bar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/navBarColor">

        <LinearLayout
            android:id="@+id/deck_source_language_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back_arrow" />
            <requestFocus/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deck_source_language_step_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/step_unselected" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/step_selected" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/step_unselected" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/step_unselected" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/step_unselected" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deck_source_language_next_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/deck_source_language_next_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/navigation_button_next"
                android:textColor="@color/textDisabled"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/deck_source_language_next_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/forward_arrow_disabled"
                android:contentDescription="@string/navigation_button_next" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>